# EU5MinerMCP

./: AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  agents-instructions.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
documents/: architecture.md  development-environment.md
documents/specs/: README.md  diplomacy-helper-tools.md  read-only-server.md  religion-helper-tools.md
scripts/: setup-centralized-uv.ps1
src/eu5miner_mcp/: __init__.py  __main__.py  cli.py  models.py  serializers.py  server.py  transport.py
src/eu5miner_mcp/tools/: __init__.py  diplomacy.py  entities.py  files.py  install.py  mods.py  religion.py  server.py  systems.py
tests/: __init__.py  test_cross_package_consumer.py  test_server_shell.py
